[package]
name = "complex-polygamma"
version = "0.1.0"
authors = ["hmb <humberto.munozb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simba = "0.1.5"
num-traits = "0.2"

[dev-dependencies]
num-complex = "0.2"